Now with timetable

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -416,5 +416,9 @@
                 "nothingFound": "No Results Found"
             }
         }
-    }
+    },
+    "LinePatternPathTimetable": {},
+    "LinePatternPathStop": {},
+    "LinePatternPath": {},
+    "LinePatternPathSpine": {}
 }
