Updated with relative time

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -428,5 +428,9 @@
     },
     "LinePatternPathStop": {},
     "LinePatternPath": {},
-    "LinePatternPathSpine": {}
+    "LinePatternPathSpine": {},
+    "StopRealTime": {
+        "will_pass": "{value}",
+        "just_passed": "Just passed"
+    }
 }
