--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -432,5 +432,8 @@
     "StopRealTime": {
         "will_pass": "{value}",
         "just_passed": "Just passed"
+    },
+    "LiveIcon": {
+        "label": "Real-time data"
     }
 }
