--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -435,5 +435,8 @@
     },
     "LiveIcon": {
         "label": "Real-time data"
+    },
+    "ArrivalEstimates": {
+        "label": "Real-time data"
     }
 }
