--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -457,5 +457,21 @@
             "label": "Search",
             "placeholder": "A pesquisa está muito básica mas funciona :)"
         }
+    },
+    "AppFooter": {
+        "contacts": {
+            "info_line": {
+                "number": "210 418 800",
+                "description": "Linha informativa Carris Metropolitana",
+                "disclaimer": "Chamada Rede Fixa Nacional"
+            },
+            "help_line": {
+                "number": "210 410 400",
+                "description": "Linha de apoio ao passageiro",
+                "disclaimer": "Chamada Rede Fixa Nacional"
+            }
+        },
+        "copyright": "© Carris Metropolitana 2023 - Todos os direitos reservados",
+        "privacy_policy": "Política de Privacidade"
     }
 }
