Tweaks to search

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -556,5 +556,12 @@
             "arriving_now": "< 1 min",
             "realtime": "{value} min"
         }
+    },
+    "StopsExplorerToolbarSearch": {
+        "label": "Procurar paragens por nome, código, localização...",
+        "placeholder": "Procurar paragens por nome, código, localização...",
+        "no_results": "Nenhum Resultado Encontrado",
+        "arriving_now": "< 1 min",
+        "realtime": "{value} min"
     }
 }
