--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -542,7 +542,7 @@
         }
     },
     "HelpdesksExplorerInfo": {
-        "message": "Dedicados ao passageiro, os espaços navegante® Carris Metropolitana, concentram todos os serviços relacionados com a Carris Metropolitana, possibilitando esclarecer dúvidas, solicitar a emissão de cartões navegante® ou mesmo aderir ao passe navegante® família e antigo combatente."
+        "message": "Dedicados ao passageiro, os espaços navegante® Carris Metropolitana, concentram todos os serviços relacionados com a Carris Metropolitana, possibilitando esclarecer dúvidas, solicitar a emissão de cartões navegante® ou aderir ao passe navegante® família e antigo combatente."
     },
     "HelpdesksExplorerItemTimetable": {
         "from": "De",
