--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -516,6 +516,43 @@
         "cookies_policy": "Política de Cookies",
         "legal_disclaimer": "Aviso Legal"
     },
+    "AppFooterNav": {
+        "travel": {
+            "title": "Viajar",
+            "links": {
+                "schedules": "Horários",
+                "stops": "Paragens",
+                "planner": "Planeador"
+            }
+        },
+        "purchase": {
+            "title": "Comprar",
+            "links": {
+                "cards": "Cartões",
+                "discounts": "Descontos",
+                "frequent": "Viagens Frequentes",
+                "ocasional": "Viagens Ocasionais",
+                "tariffs": "Tarifas"
+            }
+        },
+        "inform": {
+            "title": "Informar",
+            "links": {
+                "helpdesks": "Espaços navegante®",
+                "help": "Apoio ao Passageiro",
+                "faq": "Questões Frequentes",
+                "news": "Notícias"
+            }
+        },
+        "corporate": {
+            "links": {
+                "brand": "Carris Metropolitana",
+                "jobs": "Recrutamento",
+                "opendata": "Dados Abertos",
+                "status": "Estado"
+            }
+        }
+    },
     "HelpdesksExplorer": {
         "title": "Espaços navegante® Carris Metropolitana"
     },
