--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -564,7 +564,7 @@
             "label": "Horário"
         },
         "occupation": {
-            "label": "Ocupação Atual"
+            "label": "Informação em Tempo Real"
         }
     },
     "HelpdesksExplorerGrid": {
@@ -598,7 +598,11 @@
             "label": "Clientes em espera:"
         },
         "expected_wait_time": {
-            "label": "Tempo de espera estimado:"
+            "label": "Tempo de espera estimado:",
+            "available_now": "Agora",
+            "available_soon": "< 1 min",
+            "available_at_minutes": "{minutes} min",
+            "available_at_hours": "{hours} h {minutes} min"
         }
     },
     "StopsExplorerTimetable": {
