Updated timetable header

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -613,7 +613,8 @@
         "no_service": "Sem Serviço"
     },
     "StopsExplorerTimetableHeader": {
-        "line": "Linha e Destino",
+        "line": "Linha",
+        "headsign": "Destino",
         "estimate": "Previsão"
     },
     "StopsExplorerTimetablePreviousTrips": {
