Added mobile header

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -627,7 +627,7 @@
         }
     },
     "EncmExplorerMapPopup": {
-        "view_in_list": "Mais Informação"
+        "view_in_list": "Mais Informações"
     },
     "EncmExplorerGrid": {
         "address": {
