Added Facility Icons and Open Graph images

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -685,7 +685,7 @@
         }
     },
     "EncmExplorerInfo": {
-        "message": "Dedicados ao passageiro, os espaços navegante® Carris Metropolitana, concentram todos os serviços relacionados com a Carris Metropolitana, possibilitando esclarecer dúvidas, solicitar a emissão de cartões navegante® ou aderir ao passe navegante® família e antigo combatente."
+        "message": "Disponíveis para os nossos passageiros, os Espaços navegante® Carris Metropolitana estão dedicados a prestar informações sobre a rede e bilhética Carris Metropolitana, possibilitando o esclarecimento de dúvidas, a emissão de cartões navegante® e a adesão a perfis e descontos."
     },
     "EncmExplorerItemTimetable": {
         "from": "De",
