Fixes to show lines

--- a/frontend/translations/en.json
+++ b/frontend/translations/en.json
@@ -361,7 +361,7 @@
     "Pannel": {
         "error": "Temporarily unavailable"
     },
-    "LinesPage": {
+    "LinesExplorer": {
         "pannel_title": "Lines & Schedules"
     },
     "LineSelector": {
